--- a/languages.html
+++ b/languages.html
@@ -27,12 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -40,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -63,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -114,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -143,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -204,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -291,18 +291,18 @@ position: relative;
 
 <div onselectstart="return false" id="menu1">
 
-　　&nbsp;<a href="http://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
+　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/credits">credits</a></font>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
 
 <center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="http://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
+ <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
 
 <p style="font-size:10px;line-height:50%;">
 <br></p>
@@ -311,14 +311,14 @@ position: relative;
 <br></p>
 
 <center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="http://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="http://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="http://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="http://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="http://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="http://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="http://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="http://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
+<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
+<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
+<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
+<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
+<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
+<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
+<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
+<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
 <img src="https://i.imgur.com/op6oXma.png"/></div></center>
 
 <p style="font-size:10px;line-height:70%;">
@@ -330,48 +330,48 @@ position: relative;
 
 <div id="menu2">
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="http://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="http://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="http://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="http://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="http://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="http://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="http://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
 
 
 </div>
 
 <div id="stuff">
 
-<div style="background-image:url(http://i.imgur.com/iehNS9T.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/iehNS9T.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
-<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"></div>
-<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"></div>
+<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"></div>
+<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"></div>
 <div style= "padding-left: 15%; padding-right: 20%;">
 
-<center><img src="http://i.imgur.com/o89J1m2.gif"></center><br>
-<center><font color="#B49797">{ language learning }</font><br><br><img src="http://i.imgur.com/fBIjD8H.gif"></center>
+<center><img src="https://i.imgur.com/o89J1m2.gif"></center><br>
+<center><font color="#B49797">{ language learning }</font><br><br><img src="https://i.imgur.com/fBIjD8H.gif"></center>
 <br><br>
-　　<font color="#D3BFBF">so, portuguese ( português ) is my mother language ( the brazilian portuguese. i'm from<br>　são paulo ) and i muuust say, a very strict mommy, but also very romantic <img src="http://i.imgur.com/Vuc8cRg.gif"></font>
+　　<font color="#D3BFBF">so, portuguese ( português ) is my mother language ( the brazilian portuguese. i'm from<br>　são paulo ) and i muuust say, a very strict mommy, but also very romantic <img src="https://i.imgur.com/Vuc8cRg.gif"></font>
 <br><br><br><font color="#C4B2B2">　　these are languages i'm currently learning and my level of practice :</font>
 <br><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">english</font>　　<img src="http://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ i'm considered fluent, but i'm not very comfortable,<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　still improving ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">japanese ( nihongo, 日本語 )</font>　　<img src="http://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i have to practice my vocabulary and<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　kanji, aaaa ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">germany ( deutsch )</font>　　<img src="http://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ my vocabulary is shit but i'm going fast forward ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">italian ( italiano )</font>　　<img src="http://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ well i must learn to speak without sound thick to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　everyone ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">spanish ( español )</font>　　<img src="http://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ good but i have a horrible accent and need to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　practice ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">french ( français )</font>　　<img src="http://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i want to have a cute accent, help ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">english</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ i'm considered fluent, but i'm not very comfortable,<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　still improving ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">japanese ( nihongo, 日本語 )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i have to practice my vocabulary and<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　kanji, aaaa ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">germany ( deutsch )</font>　　<img src="https://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ my vocabulary is shit but i'm going fast forward ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">italian ( italiano )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ well i must learn to speak without sound thick to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　everyone ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">spanish ( español )</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ good but i have a horrible accent and need to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　practice ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">french ( français )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i want to have a cute accent, help ]</font><br><br>
 
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">russian ( russkij jazyk, русский язык )</font>　　<img src="http://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i'm anxious to start learning<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　properly, but i'm so busy ugh ]</font><br><br>
-<img src="http://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">korean ( hanguk-eo, 한국어 )</font>　　<img src="http://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i am very interested, but things are<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　hard for now and i need tiiiime ]</font><br><br>
-<br><center><img src="http://i.imgur.com/fBIjD8H.gif"></center><br><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">russian ( russkij jazyk, русский язык )</font>　　<img src="https://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i'm anxious to start learning<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　properly, but i'm so busy ugh ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">korean ( hanguk-eo, 한국어 )</font>　　<img src="https://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i am very interested, but things are<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　hard for now and i need tiiiime ]</font><br><br>
+<br><center><img src="https://i.imgur.com/fBIjD8H.gif"></center><br><br><br>
 　for some people who are still curious about my origins, as i am brazilian, i decided to tell you what i know.<br>
 　i have a strong european descent, mainly italian.<br>
 you can realize it by my two surnames ( cavalcante assolari ) that are obviously italian LOL<br>
 　( "cavalcante" is a corruption of "cavalcanti", it is quite common here )<br>
 　buuuuut, i also have other descents: germany, portuguese, well... western european, it's almost impossible to be sure, i just can confirm those i quoted.<br>
-　this is one of the reasons i'm starting to learn italian and several european languages, i feel it would be nice to get more in touch with my origins, right ? <img src="http://i.imgur.com/J876uxw.gif"><br><br>
+　this is one of the reasons i'm starting to learn italian and several european languages, i feel it would be nice to get more in touch with my origins, right ? <img src="https://i.imgur.com/J876uxw.gif"><br><br>
 　anyway. i'm totally mixed up, like most brazilians !
 
 
 </div>
 <br><br><br><br>
-<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"></div>
-<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"><img src="http://i.imgur.com/l7SqfzZ.gif"></div>
+<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"></div>
+<div style="width: 700px;height: 20px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"><img src="https://i.imgur.com/l7SqfzZ.gif"></div>
 
 
 
