--- a/look-book.html
+++ b/look-book.html
@@ -27,12 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -40,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -63,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -114,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -143,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -204,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -291,18 +291,18 @@ position: relative;
 
 <div onselectstart="return false" id="menu1">
 
-　　&nbsp;<a href="http://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
+　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/credits">credits</a></font>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
 
 <center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="http://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
+ <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
 
 <p style="font-size:10px;line-height:50%;">
 <br></p>
@@ -311,14 +311,14 @@ position: relative;
 <br></p>
 
 <center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="http://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="http://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="http://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="http://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="http://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="http://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="http://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="http://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
+<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
+<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
+<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
+<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
+<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
+<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
+<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
+<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
 <img src="https://i.imgur.com/op6oXma.png"/></div></center>
 
 <p style="font-size:10px;line-height:70%;">
@@ -330,16 +330,16 @@ position: relative;
 
 <div id="menu2">
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="http://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="http://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="http://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="http://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="http://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="http://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="http://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
 
 
 </div>
 
 <div id="stuff">
 
-<div style="background-image:url(http://i.imgur.com/DTETzQG.gif); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
+<div style="background-image:url(https://i.imgur.com/DTETzQG.gif); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
 
-<div style="width: 650px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"><img src="http://i.imgur.com/SHbxxld.gif"></div>
+<div style="width: 650px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"><img src="https://i.imgur.com/SHbxxld.gif"></div>
 <div style= "padding-left: 25%; padding-right: 25%;">
 
 <br><br><br>
@@ -353,7 +353,7 @@ position: relative;
 
 <script>
 function popcbox2(tid, tkey) {
-	var baseurl = "http://www4.cbox.ws/box/?boxid=4278831&boxtag=zwp0z5",
+	var baseurl = "https://www4.cbox.ws/box/?boxid=4278831&boxtag=zwp0z5",
 		baseid = '4-4278831',
 		fontop = 0;
 		turl = '',
@@ -411,7 +411,7 @@ p { margin: 0; }
 
 <div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
 <br><br>
-<img src="http://i.imgur.com/t5u59f7.gif"/> there are 10 looks once, check the others right <a href="https://photos.app.goo.gl/oWy7JPtFreqkjtVv2"target="_blank"><font color="#E67474">here</font></a> !</font>
+<img src="https://i.imgur.com/t5u59f7.gif"/> there are 10 looks once, check the others right <a href="https://photos.app.goo.gl/oWy7JPtFreqkjtVv2"target="_blank"><font color="#E67474">here</font></a> !</font>
 <br>
 
 
@@ -899,7 +899,7 @@ yay { cursor: pointer; }
 
 <br><br><br><br><br>
 <font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.17.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="http://i.imgur.com/ZgxGpJp.png"/><br><br>
+<img width="180px" height="auto" src="https://i.imgur.com/ZgxGpJp.png"/><br><br>
 <font color="#B49797">well i have this mark on my neck since ever, what do you think about birthmarks ? i'm neutral about mine !
 <br><br>
 
