--- a/recommended.html
+++ b/recommended.html
@@ -27,12 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -40,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -63,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -114,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -143,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -204,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -291,18 +291,18 @@ position: relative;
 
 <div onselectstart="return false" id="menu1">
 
-　　&nbsp;<a href="http://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
+　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/credits">credits</a></font>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
 
 <center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="http://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
+ <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
 
 <p style="font-size:10px;line-height:50%;">
 <br></p>
@@ -311,14 +311,14 @@ position: relative;
 <br></p>
 
 <center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="http://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="http://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="http://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="http://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="http://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="http://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="http://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="http://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
+<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
+<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
+<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
+<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
+<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
+<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
+<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
+<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
 <img src="https://i.imgur.com/op6oXma.png"/></div></center>
 
 <p style="font-size:10px;line-height:70%;">
@@ -330,19 +330,19 @@ position: relative;
 
 <div id="menu2">
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="http://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="http://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="http://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="http://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="http://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="http://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="http://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
 
 
 </div>
 
 <div id="stuff">
 
-<div style="background-image:url(http://i.imgur.com/wMsipwd.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/wMsipwd.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
-<div style="width: 700px;height: 50px;overflow-x: hidden; overflow-y: hidden;"><img src="http://i.imgur.com/NbEML83.png"><img src="http://i.imgur.com/NbEML83.png"><img src="http://i.imgur.com/NbEML83.png"><img src="http://i.imgur.com/NbEML83.png"><img src="http://i.imgur.com/NbEML83.png"></div>
+<div style="width: 700px;height: 50px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"></div>
 <div style= "padding-left: 25%; padding-right: 25%;">
 
-<center><img src="http://i.imgur.com/Bs2GuOb.png"><br><br>
+<center><img src="https://i.imgur.com/Bs2GuOb.png"><br><br>
 <font color="#DB9999">{ sites & blogs i recommend }</font></center>
 <br><br><br>
 
@@ -350,19 +350,19 @@ position: relative;
 
 
 
-<img src="http://i.imgur.com/9jcAUVv.gif">　<img src="http://i.imgur.com/Szmjm6A.gif">　<img src="http://i.imgur.com/hUQytvV.gif">　<br><br><img src="http://i.imgur.com/NrB9UB9.gif">　<img src="http://i.imgur.com/zulajRd.gif">　<img src="http://i.imgur.com/gLxOf8q.gif">　<br><br><img src="http://i.imgur.com/kft2rpL.gif">　<img src="http://i.imgur.com/0Y4xXQR.gif">　<img src="http://i.imgur.com/R9En3MI.gif">　<br><br><img src="http://i.imgur.com/65XWh6x.gif">　<img src="http://i.imgur.com/jokl3rn.gif">　<img src="http://i.imgur.com/ouVX1va.gif">　<br><br><img src="http://i.imgur.com/zwZtYVy.gif">　<img src="http://i.imgur.com/zR8VqMT.png">　<img src="http://i.imgur.com/6gsVjjE.gif">　<br><br><img src="http://i.imgur.com/8jgus9J.gif">　<img src="http://i.imgur.com/eMOOTfI.gif">　<img src="http://i.imgur.com/nfmJCMB.gif">　<br><br><img src="http://i.imgur.com/9EvtDb7.gif">　<img src="http://i.imgur.com/CJHMori.gif">　<img src="http://i.imgur.com/ftzJEFC.gif">
+<img src="https://i.imgur.com/9jcAUVv.gif">　<img src="https://i.imgur.com/Szmjm6A.gif">　<img src="https://i.imgur.com/hUQytvV.gif">　<br><br><img src="https://i.imgur.com/NrB9UB9.gif">　<img src="https://i.imgur.com/zulajRd.gif">　<img src="https://i.imgur.com/gLxOf8q.gif">　<br><br><img src="https://i.imgur.com/kft2rpL.gif">　<img src="https://i.imgur.com/0Y4xXQR.gif">　<img src="https://i.imgur.com/R9En3MI.gif">　<br><br><img src="https://i.imgur.com/65XWh6x.gif">　<img src="https://i.imgur.com/jokl3rn.gif">　<img src="https://i.imgur.com/ouVX1va.gif">　<br><br><img src="https://i.imgur.com/zwZtYVy.gif">　<img src="https://i.imgur.com/zR8VqMT.png">　<img src="https://i.imgur.com/6gsVjjE.gif">　<br><br><img src="https://i.imgur.com/8jgus9J.gif">　<img src="https://i.imgur.com/eMOOTfI.gif">　<img src="https://i.imgur.com/nfmJCMB.gif">　<br><br><img src="https://i.imgur.com/9EvtDb7.gif">　<img src="https://i.imgur.com/CJHMori.gif">　<img src="https://i.imgur.com/ftzJEFC.gif">
 
 
 
 </center>
 <br><br><br>
-<font color="#ADA49C"><center><img src="http://i.imgur.com/sBg6LRN.gif"> how to have your site / blog here <img src="http://i.imgur.com/sBg6LRN.gif"></center><br><br></font><font color="#C7BCA7">
-　　　　<img src="http://i.imgur.com/q8OM9PU.gif">　it should be similar in subject and aesthetics ;<br>
-　　　　<img src="http://i.imgur.com/q8OM9PU.gif">　send me your button, it should be 88 x 31 px ;<br>
-　　　　<img src="http://i.imgur.com/q8OM9PU.gif">　your site should be sfw ( light nudity allowed ) ;<br>
-　　　　<img src="http://i.imgur.com/q8OM9PU.gif">　i give preference to sites that are classified as<br>　　　　　　　　　　　　　safe ( https ) and have their own domain !
+<font color="#ADA49C"><center><img src="https://i.imgur.com/sBg6LRN.gif"> how to have your site / blog here <img src="https://i.imgur.com/sBg6LRN.gif"></center><br><br></font><font color="#C7BCA7">
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it should be similar in subject and aesthetics ;<br>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　send me your button, it should be 88 x 31 px ;<br>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　your site should be sfw ( light nudity allowed ) ;<br>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　i give preference to sites that are classified as<br>　　　　　　　　　　　　　safe ( https ) and have their own domain !
 <br><br><br><br></font>
-<center><img height="auto" width="200px" src="http://i.imgur.com/wuxor4Q.gif"></center>
+<center><img height="auto" width="200px" src="https://i.imgur.com/wuxor4Q.gif"></center>
 </div>
 <br><br>
 
