--- a/help.html
+++ b/help.html
@@ -329,9 +329,10 @@ position: relative;
 </div>
 
 <div id="menu2">
+<center>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/reminders"><img src="https://i.imgur.com/17r4hJ1.png"/></a><img src="https://i.imgur.com/W6coopC.png"/></center>
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
-
+</center>
 
 </div>
 
